--- a/src/MudBlazor.Docs/Pages/Components/Avatar/AvatarPage.razor
+++ b/src/MudBlazor.Docs/Pages/Components/Avatar/AvatarPage.razor
@@ -32,7 +32,7 @@
         </DocsPageSection>
         <DocsPageSection>
             <SectionHeader Title="Images">
-                <Description>Avatars can display images as well, specify a link to the image with <CodeInline>Image</CodeInline>.</Description>
+                <Description>Avatars can display images as well, specify a link to the image with <CodeInline>Image</CodeInline>.  If you specify an <CodeInline>Alt</CodeInline> prop, you can specify an alternative text description for the image to help with accessibility or an error in the Image prop.</Description>
             </SectionHeader>
             <SectionContent Outlined="true" DisplayFlex="true">
                 <AvatarImageExample />
